test/zinc_source/compile_errors/control_flow/03_incompatible_if_branch_types.zn
// expected-error: if-expression branches have incompatible types

fn main() {
    debug = true
    value = if debug {
        1
    } else {
        "oops"
    }
}
